Fix footer text size which caused screen to be too high on desktop size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,6 +572,7 @@ footer {
 
     footer {
         text-shadow: 1px 1px 4px rgb(0 0 0);
+        font-size: 1rem;
     }
 
 }
